force-app/main/default/objects/Hierarchy_Config__c/Hierarchy_Config__c.object-meta.xml
<CustomObject>
    <label>Hierarchy Config</label>
    <nameField>
        <displayFormat>HC-{00000}</displayFormat>
        <label>HC Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Hierarchy Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>