force-app/main/default/objects/Hierarchy_Config__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BDM</fullName>
            </value>
            <value>
                <fullName>BDD</fullName>
            </value>
            <value>
                <fullName>Admin</fullName>
            </value>
            <value>
                <fullName>DTC BDD</fullName>
            </value>
            <value>
                <fullName>DTC BDM</fullName>
            </value>
            <value>
                <fullName>Sales Person</fullName>
                <isActive>false</isActive>
                <label>Sales Person</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>