force-app/main/default/objects/Hierarchy_Config__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>User__c</columns>
    <columns>Role__c</columns>
    <columns>Manager__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>